--- a/styles.css
+++ b/styles.css
@@ -7,34 +7,45 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-  }
-  
-/* Header Styles */
-.header {
-    background-color: #333;
-    background: linear-gradient(100deg,gray, #333,gray);
-    color: white;
-    padding: 0px 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
-.header .logo {
-    display: flex;
-    align-items: center;
+h1 {
+    font-size: 50px;
+    line-height: 64px;
+    color: #222;
+    margin: 0;
 }
 
-.header .logo img{
-    max-width: 70px;
-    margin: 0px;
+h2 {
+    font-size: 46px;
+    line-height: 54px;
+    color: #222;
+    margin: 0;
 }
 
-.header .logo h1{
+h3 {
+    font-size: 34px;
+    line-height: 44px;
+    color: #222;
+    margin: 0;
+}
+
+h4 {
     font-size: 20px;
-    color: #000000;
-    font-weight: bold;
-    margin: 0px;
+    color: #222;
+    margin: 0;
+}
+
+h6 {
+    font-size: 12px;
+    font-weight: 700;
+    color: #222;
+    margin: 0;
+}
+
+p {
+    color: #222;
+    margin: 0;
 }
 
 button {
@@ -56,6 +67,62 @@ button:hover {
     padding: 8px 15px;
     margin-left: 10px;
     cursor: pointer;
+}
+
+.button2 {
+    background: url(./public/BrandDesign/gold-brush-stroke.png) no-repeat center center/cover;
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
+    font-weight: 600;
+    color: #000000;
+    padding: 8px 15px;
+    margin: 10px;
+}
+
+.button3 {
+    background: url(./public/BrandDesign/gold-brush-stroke.png);
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
+    font-weight: 600;
+    color: #000000;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 15px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+  
+/* Header Styles */
+.header {
+    background-color: #333;
+    background: linear-gradient(100deg,gray, #333,gray);
+    color: white;
+    padding: 0px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0px;
+    z-index: 100;
+}
+
+.header .logo {
+    display: flex;
+    align-items: center;
+}
+
+.header .logo img{
+    max-width: 70px;
+    margin: 0px;
+}
+
+.header .logo h1{
+    font-size: 20px;
+    color: #000000;
+    font-weight: bold;
+    margin: 0px;
 }
 
 .cart-btn {
@@ -85,6 +152,31 @@ button:hover {
 .page {
     padding: 20px;
     flex: 1; /* Allows page sections to grow and push footer to the bottom */
+}
+
+section {
+    margin-bottom: 10px;
+}
+
+/* hero section*/
+.heroSection {
+    background: url(./public/BrandDesign/white_gradient_image.jpg) no-repeat center center/cover;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+}
+
+.heroSection h1 {
+    color: #088178;
+}
+
+.heroSection p {
+    color: white;
+    font-size: 18px;
 }
 
 /* home page styling ***********************************************************************************************/
